<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_files"
        android:icon="@drawable/ic_folder"
        android:showAsAction="ifRoom"
        android:title="@string/action_files" />
    <item
        android:id="@+id/action_vpn"
        android:icon="@drawable/ic_vpn"
        android:showAsAction="ifRoom"
        android:title="@string/action_vpn" />
    <item
        android:id="@+id/action_change_server"
        android:showAsAction="never"
        android:title="@string/action_change_server" />
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />
</menu>
