<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hv_toolbar">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:popupTheme="@style/ThemeOverlay.HomeVault.Popup"
            android:subtitleTextColor="@color/hv_on_toolbar_secondary"
            android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
            android:titleTextColor="@color/hv_on_toolbar" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:indeterminate="false"
        android:max="100"
        android:progressTint="@color/hv_progress"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/hv_background"
            android:fillViewport="true"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/hv_text_secondary"
                    android:textIsSelectable="true" />

                <Button
                    android:id="@+id/error_retry"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/action_retry" />

                <Button
                    android:id="@+id/error_cert"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_cert_help"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/error_vpn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_open_vpn" />

                <Button
                    android:id="@+id/error_change_server"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_change_server" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>
